--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
   "homepage": "http://github.com/gorriecoe/silverstripe-linkfield",
   "require": {
     "gorriecoe/silverstripe-link": "^1.0",
-    "silvershop/silverstripe-hasonefield": "^3.0 || ^4.0",
-    "symbiote/silverstripe-gridfieldextensions": "^3.1 || ^4.0"
+    "silvershop/silverstripe-hasonefield": "^3.0 || ^4.0 || ^5.0",
+    "symbiote/silverstripe-gridfieldextensions": "^3.1 || ^4.0 || ^5.0"
   },
   "extra": {
     "installer-name": "linkfield",
